app/assets/stylesheets/header.scss
@import "bootstrap-sprockets";
@import "bootstrap";

/*========================
NAVBAR
========================*/

header {
	height: 50px;
	width: 100%;
}

.btn.btn-primary.btn-md.editprofile:hover {
	color: white;
	background-color: #286090;
	text-decoration: none;
	font-weight: normal;
}

.navbar-fixed-top {
	background: rgba(0,0,0,.5);
	padding: 0 30px;
  -webkit-box-shadow:0px 1px 1px #888888;
  -moz-box-shadow:0px 1px 1px #888888;
  box-shadow: 0px 1px 1px #888888;
}

.navbar-collapse.collapse.in {
	height: 100%;
	width: 100%;
}

.collapse.navbar-collapse {
	margin-right: 15px;
}

.dropdown:hover .dropdown-menu {
display: block;
}

.navbarlink {
	color: white;
}

.navbarlink:hover {
	background: rgba(0,0,0,.5);
}

.nav.navbar-nav.navbar-right li a:hover {
	background: rgba(0,0,0,.5);
  color: white;
  font-weight: bolder;
}

.logolong {
	height: 25px;
}

.navbar-brand:hover {
	background: rgba(0,0,0,.5);
}

.navbar-login {
	width: 305px;
	padding: 10px;
	padding-bottom: 0px;
}

.navbar-login-session {
	padding: 10px;
	padding-bottom: 0px;
	padding-top: 0px;
}

.icon-size {
	font-size: 87px;
}

.navbar-toggle .icon-bar {
	background-color: white;
}

